<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>action_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="edyta@todo.todo">edyta</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <depend>action_msgs</depend>
  <buildtool_depend>builtin_interafces</build_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depen>builtin_interfaces</exec_depend>
  <exec_depen>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
